Fix navbar spacing, update underline image, adjust layout

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -27,7 +27,7 @@
     bottom: -10px;
     width: calc(100% - 60px);
     height: 4px;
-    background: linear-gradient(267deg, #DA7C25 0.36%, #B923E1 102.06%);
+    background: linear-gradient(250deg, #43cea2 0%, #185a9d 100%);
     border-radius: 2px;
 }
 
@@ -49,8 +49,8 @@
 }
 .about-skills-grid ul {
   display: grid;
-  grid-template-columns: repeat(3, 1fr); /* 3 columns */
-  gap: 10px 40px; /* spacing between rows and columns */
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px 40px;
   list-style: none;
   padding: 0;
   margin-top: 20px;
@@ -72,7 +72,7 @@
   width: 10px;
   height: 10px;
   border-radius: 50%;
-  background: linear-gradient(267deg, #DA7C25 0.36%, #B923E1 102.06%);
+  background: linear-gradient(250deg, #43cea2 0%, #185a9d 100%);
 }
 .about-skills-grid li:hover { 
   transform: scale(1.05);
@@ -96,7 +96,7 @@
 .about-achievement h1{
     font-size: 60px;
     font-weight: 700;
-    background: linear-gradient(267deg, #DA7C25 0.36%, #B923E1 102.06%);
+    background: linear-gradient(250deg, #43cea2 0%, #185a9d 100%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
