--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -22,11 +22,11 @@
 .contact-title h1::after {
     content: '';
     position: absolute;
-    left: 30px; /* aligns with padding-left */
-    bottom: -10px; /* space below the text */
-    width: calc(100% - 60px); /* match inner width excluding padding */
+    left: 30px; 
+    bottom: -10px;
+    width: calc(100% - 60px);
     height: 4px;
-    background: linear-gradient(267deg, #DA7C25 0.36%, #B923E1 102.06%);
+    background: linear-gradient(250deg, #43cea2 0%, #185a9d 100%);
     border-radius: 2px;
 }
 
@@ -42,7 +42,7 @@
 .contact-left h1{
     font-size: 80px;
     font-weight: 700;
-    background: linear-gradient(267deg, #DA7C25 0.36%, #B923E1 102.06%);
+    background: linear-gradient(250deg, #43cea2 0%, #185a9d 100%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -118,7 +118,7 @@
     border: none;
     color: white;
     border-radius: 50px;
-    background: linear-gradient(267deg, #DA7C25 0.36%, #B923E1 102.06%);
+    background: linear-gradient(250deg, #43cea2 0%, #185a9d 100%);
     font-size: 22px;
     padding: 20px 60px;
     margin-bottom: 10px;
