--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -18,7 +18,7 @@
     font-weight: 600;
 }
 .hero h1 span{
-    background: linear-gradient(267deg, #DA7C25 0.36%, #B923E1 102.06%);
+    background: linear-gradient(250deg, #43cea2 0%, #185a9d 100%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -41,7 +41,7 @@
 .hero-connect{
     padding: 20px 40px;
     border-radius: 50px;
-    background: linear-gradient(267deg, #DA7C25 0.36%, #B923E1 102.06%);
+    background: linear-gradient(250deg, #43cea2 0%, #185a9d 100%);
     cursor: pointer;
 }
 .hero-resume{
