--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,76 +1,90 @@
-.navbar{
+.navbar {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 20px 170px;
+    margin: 20px 120px;
     margin-top: 0px;
 }
 
-.logo-image{
+.logo-image {
     height: 200px;
     width: 200px;
 }
 
-.nav-menu{
+.nav-menu {
     display: flex;
     align-items: center;
     list-style: none;
-    gap: 60px;
+    gap: 50px; 
     font-size: 20px;
 }
 
-.nav-connect{
-    padding: 20px 40px;
-    border-radius: 50px;
-    background: linear-gradient(267deg, #DA7C25 0.36%, #B923E1 102.06%);
-    font-size: 22px;
-    cursor: pointer;
-    transition: 0.5s;
-}
-
-.nav-connect:hover{
-    transform: scale(1.05);
-}
-.nav-menu li{
+.nav-menu li {
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    align-items: center;
+    justify-content: center;
+    gap: 2px; 
     cursor: pointer;
 }
-.nav-menu li img{
-    display: flex;
-    margin: auto;
+
+.nav-menu li img {
+    height: 10px;
+    width: 50px;
+    margin: 0 auto;
 }
-.anchor-link{
+
+.anchor-link {
     text-decoration: none;
     color: white;
 }
-.nav-mob-close{
+
+.nav-connect {
+    padding: 15px 30px;
+    border-radius: 50px;
+    background: linear-gradient(250deg, #43cea2 0%, #185a9d 100%);
+    font-size: 20px;
+    cursor: pointer;
+    transition: 0.5s;
+    margin-left: 60px;
+}
+
+.nav-connect:hover {
+    transform: scale(1.05);
+}
+
+.nav-mob-close {
     display: none;
 }
-.nav-mob-open{
+
+.nav-mob-open {
     display: none;
 }
-@media(max-width:768px){
-    .navbar{
+
+@media(max-width:768px) {
+    .navbar {
         margin: 20px 50px;
     }
-    .nav-connect{
+
+    .nav-connect {
         display: none;
     }
-    .nav-mob-open{
+
+    .nav-mob-open {
         display: block;
         position: fixed;
         right: 30px;
     }
-    .nav-mob-close{
+
+    .nav-mob-close {
         display: block;
         position: relative;
         top: 30px;
         left: 290px;
         width: 30px;
     }
-    .nav-menu{
+
+    .nav-menu {
         position: fixed;
         flex-direction: column;
         align-items: start;
@@ -83,7 +97,8 @@
         transition: right 0.5s;
         right: -350px;
     }
-    .nav-menu li{
+
+    .nav-menu li {
         font-size: 30px;
         padding-left: 100px;
         flex-direction: row;
